# CAXE-driver

./: CMakeLists.txt
caxe/: driver.vrdrivermanifest
caxe/resources/: driver.vrresources
caxe/resources/input/: caxe_controller_input.json  caxe_controller_profile.json  legacy_bindings_caxe.json
lib/serial/: CMakeLists.txt
lib/serial/visual_studio/serial/: serial.vcxproj
src/: ControllerDriver.cpp  ControllerDriver.h  DeviceFactory.cpp  DeviceProvider.cpp  DeviceProvider.h
